# evo-python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml
code-samples/: .gitignore  README.md  pyproject.toml
code-samples/auth-and-evo-discovery/: api-examples.ipynb  native-app-token.ipynb  native-spa-web-auth.ipynb  sdk-examples.ipynb  service-app-auth.ipynb  service-app-token.ipynb
code-samples/blockmodels/: api-examples.ipynb  reports.ipynb  sdk-examples.ipynb
code-samples/colormaps/: README.md  api-examples.ipynb  sdk-examples.ipynb
code-samples/common-tasks/: working-with-parquet.ipynb
code-samples/evo-visualisation-widget/: README.md  example.ipynb  package-lock.json  package.json  requirements.txt
code-samples/evo-visualisation-widget/evo_viz/: __init__.py  auth.py  visualization.py  widget.py
code-samples/files/: README.md  api-examples.ipynb  sdk-examples.ipynb  upload-a-file.ipynb
code-samples/geoscience-objects/: README.md
code-samples/geoscience-objects/download-drilling-campaign/: download-drilling-campaign.ipynb
code-samples/geoscience-objects/download-pointset/: download-pointset.ipynb
code-samples/geoscience-objects/download-triangle-mesh/: download-triangle-mesh.ipynb
code-samples/geoscience-objects/drilling-campaign/: README.md
code-samples/geoscience-objects/publish-downhole-collection/: README.md  publish-downhole-collection.ipynb
code-samples/geoscience-objects/publish-drilling-campaign/: publish-drilling-campaign.ipynb
code-samples/geoscience-objects/publish-line-segments/: publish-line-segments.ipynb
code-samples/geoscience-objects/publish-pointset/: README.md  publish-pointset.ipynb  sdk-examples.ipynb
code-samples/geoscience-objects/publish-regular-2d-grid/: README.md  publish-regular-2d-grid.ipynb
code-samples/geoscience-objects/publish-triangular-mesh/: README.md  publish-triangular-mesh.ipynb
code-samples/geoscience-objects/running-kriging-compute/: README.md  running-kriging-compute.ipynb
code-samples/geoscience-objects/simplified-object-interactions/: create-downhole-collection.ipynb  simplified-object-interactions.ipynb
code-samples/tests/: notebook_auth_patch.py  notebook_helpers.py  test_notebooks.py
code-samples/workspaces/: api-examples.ipynb  sdk-examples.ipynb
code-samples/workspaces/bonus/: move-objects.ipynb  workspace_utils.py
samples/: pyproject.toml
samples/.github/: DEPENDENCIES.md  NOTEBOOK_TESTING.md  TESTING.md
samples/.github/scripts/: .env.example  README.md  test_notebooks.py
samples/.github/workflows/: NOTEBOOK_TESTING.md  test-notebooks.yaml
samples/auth-and-evo-discovery/workflows/: README.md  (+1 more)
samples/colormaps/: README.md
samples/files/: api-examples.ipynb  requirements.txt  sdk-examples.ipynb
samples/workspaces/: api-examples.ipynb
(+93 files in other folders)
