[project]
name = "evo-code-samples"
version = "0.0.2"
description = "Code samples for the Seequent Evo Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Authlib>=1.6.0",
    "evo-schemas>=2026.1.8",
    "evo-sdk>=0.1.18",
    "geosoft>=2025.1.1 ; sys_platform == 'win32'",
    "jupyterlab>=4.0.0",
    "PyJWT",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "prettytable>=3.16.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4",
    "ruff>=0.14.2",
    "nbstripout>=0.8.2",
]

[project.urls]
Source = "https://github.com/SeequentEvo/evo-python-sdk"
Tracker = "https://github.com/SeequentEvo/evo-python-sdk/issues"
Homepage = "https://www.seequent.com/"
Documentation = "https://developer.seequent.com/"

