[project]
name = "evo-code-samples"
version = "0.0.1"
description = "Code samples for the Seequent Evo Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evo-compute>=0.0.3",
    "evo-schemas>=2025.12.15",
    "evo-sdk>=0.2.2",
    "geosoft>=2025.1.1 ; sys_platform == 'win32' and python_version < '3.14'",
    "PyJWT",
    "matplotlib>=3.10.8",
    "pandas[excel]>=2.2.3",
    "plotly>=5.18.0",
    "prettytable>=3.16.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "pre-commit>=4",
    "ruff>=0.14.2",
    "nbstripout>=0.8.2",
]
test = [
    "pytest>=8.0.0",
    "nbformat>=5.10.0",
    "nbclient>=0.10.0",
    "ipykernel>=6.29.0",
]

[project.urls]
Source = "https://github.com/SeequentEvo/evo-python-sdk"
Tracker = "https://github.com/SeequentEvo/evo-python-sdk/issues"
Homepage = "https://www.seequent.com/"
Documentation = "https://developer.seequent.com/"

[tool.pytest.ini_options]
pythonpath = ["tests"]
